<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:background="@color/white"
    android:orientation="vertical"
    tools:context="com.example.ijuin.testapplication.views.Dialog.DialogChooseInfoToSend">

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_marginStartPercent="66%"
            android:text="@string/aboutUs"
            android:textColor="@color/black"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userName"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_yearborn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_born"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_yearborn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userGender"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_gender"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userPhone"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userAddress"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userCompany"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_company"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userCity"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_city"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userCountry"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_country"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userWeight"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_weight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userHeight"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_height"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_linkFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userFacebook"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_linkFB"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>

    <android.support.percent.PercentRelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <TextView
            android:id="@+id/txt_linkTW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/userTwitter"
            android:textColor="@color/black"
            app:layout_marginStartPercent="@dimen/dialog_textview"/>
        <CheckBox
            android:id="@+id/checkbox_linkTW"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/left_node_bg"
            app:layout_marginStartPercent="@dimen/dialog_checkbox"/>
    </android.support.percent.PercentRelativeLayout>


</LinearLayout>
