<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="mainViewModel" type="com.example.ijuin.testapplication.viewmodels.MainViewModel"/>
    </data>

    <android.support.percent.PercentRelativeLayout
        android:background="@{mainViewModel.backgroundColor}"
        android:id="@+id/mainPercentRelativeLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/txt_setting"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/settings"
            android:textSize="35sp"
            android:textColor="@color/white"
            app:layout_marginTopPercent="5%"/>


        <TextView
            android:id="@+id/txt_bg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/background"
            android:layout_below="@id/txt_setting"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_marginTopPercent="5%"/>

        <LinearLayout
            android:id="@+id/background_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_bg"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/theme_settings"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_change_bg_image"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/theme_btn_settings"
                android:text="@string/change_bg_image"
                android:textColor="@color/BLANCHEDALMOND"
                android:textSize="20sp"
                android:textStyle="bold"/>

            <Button
                android:id="@+id/btn_bg_color"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/theme_btn_settings"
                android:text="@string/change_bg_color"
                android:textColor="@color/BLANCHEDALMOND"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/txt_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sound"
            android:layout_below="@id/background_area"
            android:textSize="25sp"
            android:textColor="@color/white"
            app:layout_marginTopPercent="5%"/>

        <LinearLayout
            android:id="@+id/sound_area"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/txt_sound"
            android:layout_marginEnd="15dp"
            android:layout_marginStart="15dp"
            android:background="@drawable/theme_settings"
            android:orientation="vertical">

            <Button
                android:id="@+id/btn_change_sound"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/theme_btn_settings"
                android:text="@string/change_sound"
                android:textColor="@color/BLANCHEDALMOND"
                android:textSize="20sp"
                android:textStyle="bold"/>

        </LinearLayout>

        <TextView
            android:id="@+id/content"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/sound_area"
            android:layout_centerHorizontal="true"
            android:text="hello"
            app:layout_marginTopPercent="5%"
            android:textSize="20sp"/>

        <ImageView
            android:id="@+id/bg_img_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:minWidth="100dp"
            android:maxHeight="100dp"
            android:minHeight="100dp"
            android:maxWidth="100dp"
            android:layout_centerHorizontal="true"/>



    </android.support.percent.PercentRelativeLayout>
</layout>
