<?xml version="1.0" encoding="utf-8"?>

<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>
        <variable name="viewModel" type="com.example.ijuin.testapplication.viewmodels.ChatViewModel"/>
        <variable name="activity" type="com.example.ijuin.testapplication.views.ChatActivity"/>
        <import type="android.view.View"/>
    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="@dimen/standard_small"
            android:text="@string/chats_heading"
            style="@style/activity_headers"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_view"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/layout_input">
            </android.support.v7.widget.RecyclerView>

            <LinearLayout
                android:id="@+id/layout_input"
                android:layout_width="match_parent"
                android:layout_height="@dimen/small_height"
                android:orientation="horizontal"
                android:layout_alignParentBottom="true"
                style="@style/regular_layouts">

                <android.support.design.widget.FloatingActionButton
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    app:fabSize="mini"
                    android:backgroundTint="@color/TWITTER"
                    android:src="@drawable/ic_up_24dp"/>

                <EditText
                    android:id="@+id/edittext_chat_message"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:hint="@string/hint_typing"
                    android:layout_marginEnd="@dimen/margin_average"
                    android:layout_marginStart="5dp"
                    style="@style/regular_editTexts"/>
                <Button
                    android:layout_width="@dimen/small_width"
                    android:layout_height="match_parent"
                    android:text="@string/send_text"
                    android:onClick="@{() -> activity.sendMessage()}"
                    style="@style/regular_buttons"/>


            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</layout>