<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


<data>
        <variable
            name="viewModel"
            type="com.example.ijuin.testapplication.viewmodels.LoginViewModel" />
        <variable
            name="activity"
            type="com.example.ijuin.testapplication.views.LoginActivity" />
        <import type="android.view.View" />
    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/app_icon"
                android:layout_width="350dp"
                android:layout_height="180dp"
                android:layout_gravity="center"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="0dp"
                android:scaleType="centerInside"
                android:src="@drawable/applogoimg" />

            <EditText
                android:id="@+id/edtEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginRight="8dp"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/email"
                android:inputType="textEmailAddress"
                android:nextFocusDown="@+id/edtPassword"
                android:text="@{viewModel.email}"
                android:addTextChangedListener="@{viewModel.emailWatcher}"/>

            <EditText
                android:id="@+id/edtPassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:gravity="center"
                android:hint="@string/password"
                android:inputType="textPassword"
                android:layout_marginRight="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginLeft="8dp"
                android:text="@{viewModel.password}"
                android:addTextChangedListener="@{viewModel.passwordWatcher}"/>

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="center"
            android:gravity="center">
            <ProgressBar
                android:id="@+id/progressBar4"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="12dp"
                android:layout_marginStart="8dp"
                android:visibility="@{viewModel.authInProgress ? View.VISIBLE : View.GONE}"/>
        </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnLogin"
                    style="@style/LoginButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp"
                    android:layout_weight="0.5"
                    android:background="@drawable/chat_sdk_login_button_selector"
                    android:text="@string/login"
                    app:layout_constraintTop_toBottomOf="@+id/edtPassword"
                    android:onClick="@{() -> viewModel.loginWithEmail()}"/>

                <Button
                    android:id="@+id/btnRegister"
                    style="@style/LoginButtonsStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:background="@drawable/chat_sdk_register_button_selector"
                    android:text="@string/register"
                    android:layout_marginTop="8dp"
                    app:layout_constraintTop_toBottomOf="@+id/edtPassword"
                    android:onClick="@{() -> viewModel.register()}"/>

            </LinearLayout>


            <Button
                android:id="@+id/btnAnonymousLogin"
                style="@style/LoginButtonsStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/chat_sdk_login_anonymously_button_selector"
                android:onClick="@{() -> viewModel.firebaseAnonymousAuth()}"
                android:text="@string/anonymous_login"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnRegister" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btnFirebaseTwitterLogin"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ic_twitter"
                    app:layout_constraintLeft_toLeftOf="parent" />

                <Button
                    android:id="@+id/btnFacebookLogin"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"
                    android:background="@drawable/ic_facebook" />

                <com.twitter.sdk.android.core.identity.TwitterLoginButton
                    android:id="@+id/btnTwitterLogin"
                    android:layout_width="48dp"
                    android:layout_height="48dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="8dp"/>

            </LinearLayout>
        </LinearLayout>

    </ScrollView>
</layout>